fix(Storefrront): BCTHEME-28 Misalignment of Product Listings on Category pages when using the list Display Style

--- a/assets/scss/layouts/products/_productList.scss
+++ b/assets/scss/layouts/products/_productList.scss
@@ -27,6 +27,7 @@
     @include breakpoint("small") {
         @include grid-row($behavior: "nest");
         display: table;
+        width: 100%;
     }
 }
 
